<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/ConvertTypeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Convertion Type" />

    <Spinner
        android:id="@+id/conversationType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/choose_conversation_type" />

    <TextView
        android:id="@+id/SourceUnitText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Select source unit and value" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/sourceValueEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:hint="@string/enter_value"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/sourceUnitSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:prompt="@string/choose_source_unit" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/TargetUnitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="Set target unit" />

    <Spinner
        android:id="@+id/targetUnitSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:prompt="@string/choose_target_unit" />

    </LinearLayout>

    <Button
        android:id="@+id/convertButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/convert" />

    <EditText
        android:id="@+id/resultEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="false"
        android:focusable="false"
        android:hint="@string/result_display"
        android:inputType="none" />


</LinearLayout>